# repo2readme

./: .env.example  README.md  pyproject.toml
src/repo2readme/: __init__.py  main.py
src/repo2readme/config/: system_prompt.txt
src/repo2readme/configs/: system_prompt.txt
